--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "An implementation of Location as described by MDN. Useful for emulating window.location on the server side.",
     "main": "urlutils.js",
     "scripts": {
-        "test": "echo \"Success! \(currently no tests exist\)\" && exit 0"
+        "test": "echo \"Success! (currently no tests exist)\" && exit 0"
     },
     "repository": {
         "type": "git",
